Update panflute version

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,6 +6,14 @@ universal=1
 
 [metadata]
 description-file = README.md
+version = 0.1.2
+release = 0.1.2
 
 [aliases]
 test=pytest
+
+[build_sphinx]
+project = pandoc-beamer-block
+version = 0.1
+release = 0.1.2
+copyright = 2019-2021, Christophe Demko
