--- a/tox.ini
+++ b/tox.ini
@@ -1,14 +1,10 @@
 [tox]
-envlist = py36
+envlist = py36,py37,py38,py39
 
 [testenv]
-deps =
-	coverage
-	black
-	pylint
-    panflute>=1.11
+deps = .[test]
 
 commands =
     black --check pandoc_beamer_block.py setup.py tests/test_block.py docs/conf.py
-    coverage run -a --source=pandoc_beamer_block setup.py test
+    pytest --cov=pandoc_beamer_block
     pylint pandoc_beamer_block.py setup.py
