Use correct command for coveralls

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -48,10 +48,10 @@ jobs:
         wget https://github.com/jgm/pandoc/releases/download/2.18/pandoc-2.18-1-amd64.deb
         sudo dpkg -i pandoc-2.18-1-amd64.deb
         python -m pip install --upgrade pip
-        pip install setuptools coveralls pytest .[test]
+        pip install setuptools coveralls .[test]
     - name: Test
       env:
         COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
       run: |
-        coverage run --source=pandoc_beamer_block setup.py test
+        coverage run --source=pandoc_beamer_block -m pytest tests/
         coveralls
