--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,50 @@
-[tox]
-envlist = py36,py37,py38,py39
-
 [testenv]
-deps = .[test]
-
+description = run unit tests
+allowlist_externals = poetry
+commands_pre =
+    poetry env use {envpython}
+    poetry install
 commands =
-    black --check pandoc_beamer_block.py setup.py tests/test_block.py docs/conf.py
-    pytest --cov=pandoc_beamer_block
-    pylint pandoc_beamer_block.py setup.py
+    poetry run pytest
+commands_post =
+    poetry env use system
+
+[testenv:style]
+description = run style
+setenv =
+    MYPYPATH = .
+commands_pre =
+    poetry env use {envpython}
+    poetry install
+commands =
+    poetry run slotscheck pandoc_beamer_block.py
+    poetry run refurb pandoc_beamer_block.py
+    poetry run teyit --show-stats --fail-on-change tests/
+    poetry run ruff pandoc_beamer_block.py
+    poetry run black --check --diff pandoc_beamer_block.py tests
+    poetry run doc8 -q docs
+    poetry run mypy --package pandoc_beamer_block
+    poetry run flake8 pandoc_beamer_block.py
+commands_post =
+    poetry env use system
+
+[testenv:linter]
+description = run pylint
+commands_pre =
+    poetry env use {envpython}
+    poetry install
+commands =
+    poetry run pylint pandoc_beamer_block.py
+commands_post =
+    poetry env use system
+
+[testenv:coverage]
+description = run coverage
+commands_pre =
+    poetry env use {envpython}
+    poetry install
+commands =
+    poetry run pytest --cov=pandoc_beamer_block --junitxml=junit.xml --cov-report=html:build/coverage
+commands_post =
+    poetry env use system
+
