--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 requires =
-    tox>=4.2
+    tox>=4.11
 
 [testenv]
 description = run unit tests
@@ -22,14 +22,14 @@ commands_pre =
     poetry env use {envpython}
     poetry install
 commands =
-    poetry run slotscheck pandoc_beamer_block.py
-    poetry run refurb pandoc_beamer_block.py
+    poetry run slotscheck pandoc_beamer_block
+    poetry run refurb pandoc_beamer_block
     poetry run teyit --show-stats --fail-on-change tests/
-    poetry run ruff pandoc_beamer_block.py
-    poetry run black --check --diff pandoc_beamer_block.py tests
+    poetry run ruff check pandoc_beamer_block
+    poetry run black --check --diff pandoc_beamer_block tests
     poetry run doc8 -q docs
-    poetry run mypy --package pandoc_beamer_block
-    poetry run flake8 pandoc_beamer_block.py
+    poetry run mypy pandoc_beamer_block
+    poetry run flake8 pandoc_beamer_block
 commands_post =
     poetry env use system
 
@@ -39,7 +39,7 @@ commands_pre =
     poetry env use {envpython}
     poetry install
 commands =
-    poetry run pylint pandoc_beamer_block.py
+    poetry run pylint pandoc_beamer_block
 commands_post =
     poetry env use system
 
